# RedRTC

./: CMakeLists.txt  Makefile  README.md  redrtc.c
example/: index.html
include/: client.h  messages.h  room.h  server.h  utilities.h
src/: client.c  message.c  room.c  server.c  utilities.c
test/: test).c
